# enterprise-ai-platform-planes

./: .gitignore  README.md  pyproject.toml
docs/: DECISION-MATRIX-MODELS-FRAMEWORKS.md  INDUSTRY-APPLICABILITY.md  PORTFOLIO-WIRING.md  SYSTEM-DESIGN.md
docs/adr/: 0001-five-plane-separation.md  0002-model-gateway-not-provider-sdk.md  0003-platform-facade-apis.md  0004-control-plane-governance.md
openapi/: openapi.yaml
scripts/: demo.sh
src/ai_planes/: __init__.py  api.py  control_plane.py  data_plane.py  knowledge_plane.py  model_plane.py  orchestration_plane.py  platform.py  types.py
tests/: test_planes.py
